<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Fragments.listview">

    <TextView
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color_layout_2"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/test_confirmation_title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/icons_clock"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/test_time_left" />

        <TextView
            android:id="@+id/time_remaining_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="@color/test_button_blue"
            android:gravity="center_vertical|right"
            android:text="@string/empty_time" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_selected" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/attemptedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/icons_checked"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/test_attempted" />

        <TextView
            android:id="@+id/attemptedCount_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/empty_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_selected" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unattemptedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/icons_minus"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/test_unattempted" />

        <TextView
            android:id="@+id/unattemptedCount_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/empty_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_selected" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/markedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/icons_star"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/test_marked_sub" />

        <TextView
            android:id="@+id/markedCount_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/empty_text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color_layout_2"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/test_confirmation_message" />

    <LinearLayout
    android:id="@+id/footer_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_margin="5dp"
        android:visibility="visible"
    android:orientation="horizontal">

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/box_border_blue_bg"
        android:gravity="center"
        android:text="@string/yes" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/box_border_transpartent_bg"
        android:gravity="center"
        android:text="@string/no" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/evaluation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/evaluation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/color_layout_2"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/test_evaluation_title" />

        <TextView
            android:id="@+id/evaluation_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/color_layout_2"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/test_evaluation_message" />


        <ImageView
            android:id="@+id/evaluation_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/star_view"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/exam_evaluation" />
    </LinearLayout>
</LinearLayout>