<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context=".Activity.ResultActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_view"
        android:layout_margin="10dp"
        android:src="@drawable/icon_list"
        android:layout_centerVertical="true" />
    <TextView
        android:id="@+id/test_result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/results_label" />
    <TextView
        android:id="@+id/test_result_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/empty_time" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/box_border_lightgrey_bg"
        android:gravity="center"
        android:text="@string/show_result" />
</LinearLayout>
</LinearLayout>
