<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:id="@+id/parentLayout"
    tools:context=".Fragments.listview">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:id="@+id/content_layout"
        android:background="@drawable/box_border_lightgrey_bg">
    <!-- TODO: Update blank fragment layout -->
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="5dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal"
           android:id="@+id/header_layout"
           android:background="@drawable/box_border_white_bg">
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_gravity="center"
             android:gravity="center"
             android:id="@+id/grid_view"
             android:background="@drawable/box_border_grey_bg"
             android:text="@string/test_grid_view"
             />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_gravity="center"
               android:gravity="center"
               android:id="@+id/list_view"
               android:background="@drawable/box_border_white_bg"
               android:text="@string/test_list_view"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal"
           android:id="@+id/color_layout_1"
           android:layout_below="@+id/header_layout"
           android:background="@color/white"
           android:padding="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_gravity="center"
               android:gravity="center_vertical"
               android:text="@string/test_marked"
               android:drawableLeft="@drawable/icon_start_selected_resize"
               android:drawablePadding="5dp"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_gravity="center"
               android:gravity="center_vertical"
               android:text="@string/test_attempted"
               android:drawablePadding="5dp"
               android:drawableLeft="@drawable/round_button_blue"
               />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal"
           android:id="@+id/color_layout_2"
           android:layout_below="@+id/color_layout_1"
           android:background="@color/white"
           android:padding="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_gravity="center"
               android:gravity="center_vertical"
               android:text="@string/test_unattempted"
               android:drawablePadding="5dp"
               android:drawableLeft="@drawable/round_button_grey"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_gravity="center"
               android:gravity="center_vertical"
               android:text="@string/test_unseen"
               android:drawablePadding="5dp"
               android:drawableLeft="@drawable/round_button_grey_transparent"
               />
       </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_weight="1"
           android:layout_gravity="center"
           android:layout_below="@+id/color_layout_2"
           android:id="@+id/title_layout"
           android:gravity="center_vertical"
           android:padding="5dp"
           android:textSize="20sp"
           android:text="@string/test_title"
           />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal"
           android:id="@+id/color_count_layout"
           android:layout_below="@+id/title_layout"
           android:background="@color/white"
           android:padding="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:id="@+id/markedCount"
               android:layout_gravity="center"
               android:gravity="center_vertical"
               android:text="00"
               android:drawablePadding="5dp"
               android:drawableLeft="@drawable/icon_start_selected_resize"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:id="@+id/attemptedCount"
               android:layout_gravity="center"
               android:gravity="center_vertical"
               android:text="00"
               android:drawablePadding="5dp"
               android:drawableLeft="@drawable/round_button_blue"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:id="@+id/seenCount"
               android:layout_gravity="center"
               android:gravity="center_vertical"
               android:text="00"
               android:drawablePadding="5dp"
               android:drawableLeft="@drawable/round_button_grey"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:id="@+id/unseenCount"
               android:layout_weight="1"
               android:layout_gravity="center"
               android:gravity="center_vertical"
               android:text="00"
               android:drawablePadding="5dp"
               android:drawableLeft="@drawable/round_button_grey_transparent"
               />
       </LinearLayout>
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/grid_recyclerView"
           android:layout_width="match_parent"
           android:layout_height="500dp"
           android:padding="5dp"
           android:layout_below="@+id/color_count_layout"
           android:layout_above="@+id/footer_bar"
           android:scrollbars="vertical"/>
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/list_recyclerView"
           android:layout_width="match_parent"
           android:layout_height="500dp"
           android:padding="5dp"
           android:layout_below="@+id/color_count_layout"
           android:layout_above="@+id/footer_bar"
           android:visibility="gone"
           android:scrollbars="vertical"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:id="@+id/footer_bar"
           android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:text="@string/test_back"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/box_border_transpartent_bg"
            android:gravity="center"
            android:layout_weight="1"
            />
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/submitButton"
               android:text="@string/test_submit"
               android:background="@drawable/box_border_blue_bg"
               android:layout_margin="10dp"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_weight="1"
               />
       </LinearLayout>
   </RelativeLayout>
    </FrameLayout>
</FrameLayout>